test/libhyperion/syntaxTests/nameAndTypeResolution/406_invalid_address_checksum.hyp
contract C {
    function f() pure public {
        address x = ZFA0bFc97E48458494Ccd857e1A85DC91F7F0046E;
        x;
    }
}
// ----
// SyntaxError 9429: (64-105): This looks like an address but has an invalid checksum. Correct checksummed address: "ZfA0bFc97E48458494Ccd857e1A85DC91F7F0046E". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
